--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li class="login-link"><a href="enter.html">Вход</li>
       </ul>
     </nav>
+  </header>
     <main class="main-content"
       <h1 class="visually-hidden">Парикмахерская Barbershop "Borodinski"</h1>
       <section class="advantages">
@@ -63,9 +64,62 @@
       <section class="gallary">
         <h2>Фотогаллерея</h2>
         <div>
-          <a href="gallary.html" width="286" height="164"></a>
+          <a href="gallary.html" width="286" height="164" alt="Интерьер"></a>
         </div>
+        <button class="button gallary-button gallary-button-back">Назад</battom>
+        <button class="button gallary-button gallary-button-next">Вперед</battom>
       </section>
-  </header>
+      <section class="contacts">
+        <h2>Контактная информация</h2>
+        <p>
+          БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+          АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+          ТЕЛЕФОН: +7 (495) 666-02-66
+        </p>
+        <p>
+          ВРЕМЯ РАБОТЫ:<br>
+          ПН—ПТ: С 10:00 ДО 22:00<br>
+          СБ—ВС: С 10:00 ДО 19:00
+        </p>
+        <a class="button" href="map.html">Как проехать</a>
+        <a class="button" href="contacts.html">Обратная связь</a>
+      </section>
+      <section class="appointment">
+        <h2>Записаться</h2>
+        <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ
+          С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+        <!-- Form will be here -->
+      </section>
+  </main>
+  <footer>
+    <p class="footer-contacts">
+      БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+      АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+      <a href="map.html">КАК НАС НАЙТИ?</a><br>
+      ТЕЛЕФОН: +7 (495) 666-02-66
+    </p>
+    <div class="footer-social">
+      <span>Давай дружить!</span>
+      <ul class="social-list">
+        <li><a class="social-item" href="#">Vkontakte</a></li>
+        <li><a class="social-item" href="#">Facebook</li>
+        <li><a class="social-item" href="#">Instagramm</li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <span>Разработано:</span>
+      <a class="button" href="htmlacademy.ru">HTML Academy</a>
+    </p>
+  </footer>
+  <section class="modal modal-login">
+    <h2>Личный кабинет</h2>
+    <p>Введите свой логин и пароль</p>
+    <!-- Form will be here -->
+    <span class="modal-close">Закрыть</span>
+  </section>
+  <section class="modal-map">
+    <h2 class="visually-hidden">Как добраться о нас</h2>
+    <span class="modal-close">Закрыть</span>
+  </section>
 </body>
 </html>
