--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <title>Barbershop</title>
@@ -9,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-      <img src="img/index-logo.svg" width="371" height="155" alt="Парикмахерская Barbershop "Borodinski"">
+      <img src="img/index-logo.svg" width="371" height="155" alt='Парикмахерская Barbershop "Borodinski"'>
       </a>
       <ul class="top-menu">
         <li><a href="info.html">Информация</a></li>
@@ -18,12 +17,12 @@
         <li><a href="catalog.html">Магазин</li>
         <li><a href="contacts.html">Контакты</li>
       </ul>
-      <ul class="user-navvigation">
+      <ul class="user-navigation">
         <li class="login-link"><a href="enter.html">Вход</li>
       </ul>
     </nav>
   </header>
-    <main class="main-content"
+    <main class="main-content">
       <h1 class="visually-hidden">Парикмахерская Barbershop "Borodinski"</h1>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
