--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
+
 <body>
 
 
@@ -16,26 +17,28 @@
             <a class="main-header-logo">
                 <img src="svg/index-logo.svg" width="371" height="155" alt="Парикмахерская Barbershop " Borodinski"">
             </a>
-            <ul class="site-navigation">
-                <li><a href="info.html">Информация</a></li>
-                <li><a href="news.html">Новости</a></li>
-                <li><a href="price.html">Прайс-лист</a></li>
-                <li><a href="catalog.html">Магазин</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <ul class="user-navigation">
-                <li class="login-link">
-                    <a href="enter.html">Вход</a>
-                </li>
-            </ul>
+            <div class="main-navigation-wrapper"><!-- Service class (wrapper)-->
+                <div class="container"><!-- Service class (wrapper)-->
+                    <ul class="site-navigation">
+                        <li><a href="info.html">Информация</a></li>
+                        <li><a href="news.html">Новости</a></li>
+                        <li><a href="price.html">Прайс-лист</a></li>
+                        <li><a href="catalog.html">Магазин</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                    </ul>
+                    <ul class="user-navigation">
+                        <li>
+                            <a class="login-link" href="enter.html">Вход</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-
 
     <main class="main-content">
 
         <h1 class="visually-hidden">Парикмахерская Barbershop "Borodinski"</h1>
-
 
         <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
@@ -79,79 +82,91 @@
 
             <section class="gallary">
                 <h2>Фотогаллерея</h2>
-                <figure class="gallary-content">
-                    <a href="#"><img src="img/Layer2.png" width="286" height="164" alt="Интерьер"></a>
-                </figure>
-                <button class="button gallary-button gallary-button-back">Назад</button>
-                <button class="button gallary-button gallary-button-next">Вперед</button>
+                <div class="gallary-container">
+                    <figure class="gallary-content">
+                        <a href="#"><img src="img/Layer2.png" width="286" height="164" alt="Интерьер"></a>
+                    </figure>
+                    <button class="button gallary-button gallary-button-back">Назад</button>
+                    <button class="button gallary-button gallary-button-next">Вперед</button>
+                </div>
             </section>
         </div>
 
-        <section class="contacts">
-            <h2>Контактная информация</h2>
-            <p>
-                БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-                АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
-                ТЕЛЕФОН: +7 (495) 666-02-66
-            </p>
-            <p>
-                ВРЕМЯ РАБОТЫ:<br>
-                ПН—ПТ: С 10:00 ДО 22:00<br>
-                СБ—ВС: С 10:00 ДО 19:00
-            </p>
-            <a class="button" href="map.html">Как проехать</a>
-            <a class="button" href="contacts.html">Обратная связь</a>
-        </section>
+        <div class="index-columns">
 
-
-        <section class="appointment">
-            <h2>Записаться</h2>
-            <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ
-                С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-            <form class="appointment-form" action="registrations.html" method="post">
+            <section class="contacts">
+                <h2>Контактная информация</h2>
                 <p>
-                    <label for="appointment-data">Дата</label>
-                    <input id="appointment-data" type="text" name="time" value="" placeholder="11.12.2018">
+                    БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+                    АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+                    ТЕЛЕФОН: +7 (495) 666-02-66
                 </p>
                 <p>
-                    <label for="appointment-time">Время</label>
-                    <input id="appointment-time" type="text" name="time" value="" placeholder="09:00">
+                    ВРЕМЯ РАБОТЫ:<br>
+                    ПН—ПТ: С 10:00 ДО 22:00<br>
+                    СБ—ВС: С 10:00 ДО 19:00
                 </p>
-                <p>
-                    <label for="appointment-name">Ваше имя</label>
-                    <input id="appointment-name" type="text" name="time" value="" placeholder="Усы">
-                </p>
-                <p>
-                    <label for="appointment-telefone">Телефон</label>
-                    <input id="appointment-telefone" type="text" name="time" value="" placeholder="+7 123 45-67-89">
-                </p>
-                <button class="button" type="submit" name="button">Отправить</button>
-            </form>
-        </section>
+                <a class="button" href="map.html">Как проехать</a>
+                <a class="button" href="contacts.html">Обратная связь</a>
+            </section>
 
+            <section class="appointment">
+                <h2>Записаться</h2>
+                <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ
+                    С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
 
-    </main>
-    <footer>
-        <p class="footer-contacts">
-            БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-            <a href="map.html">КАК НАС НАЙТИ?</a><br>
-            ТЕЛЕФОН: +7 (495) 666-02-66
-        </p>
-        <div class="footer-social">
-            <span>Давай дружить!</span>
-            <ul class="social-list">
-                <li><a class="social-item" href="#">Vkontakte</a></li>
-                <li><a class="social-item" href="#">Facebook</li>
-                <li><a class="social-item" href="#">Instagramm</li>
-            </ul>
+                <form class="appointment-form" action="registrations.html" method="post">
+                    <p class="appointment-item">
+                        <label for="appointment-data">Дата</label>
+                        <input id="appointment-data" type="text" name="time" value="" placeholder="11.12.2018">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-time">Время</label>
+                        <input id="appointment-time" type="text" name="time" value="" placeholder="09:00">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-name">Ваше имя</label>
+                        <input id="appointment-name" type="text" name="time" value="" placeholder="Усы">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-telefone">Телефон</label>
+                        <input id="appointment-telefone" type="text" name="time" value="" placeholder="+7 123 45-67-89">
+                    </p>
+                    <button class="button" type="submit" name="button">Отправить</button>
+                </form>
+
+            </section>
         </div>
-        <p class="footer-copyright">
-            <span>Разработано:</span>
-            <a class="button" href="htmlacademy.ru">HTML Academy</a>
-        </p>
+    </main>
+
+    <footer class="main-footer">
+            <div class="footer-contacts">
+                БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+                АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+                <a href="map.html">КАК НАС НАЙТИ?</a><br>
+                ТЕЛЕФОН: +7 (495) 666-02-66
+            </div>
+            <div class="footer-social">
+                <span>Давай дружить!</span>
+                <ul class="social-list">
+                    <li>
+                        <a class="social-item" href="#"><span class="visually-hidden">Vkontakte</span><img src="svg/vk.svg" alt="Vkontakte"></a>
+                    </li>
+                    <li>
+                        <a class="social-item fb" href="#"><span class="visually-hidden">Facebook</span><img src="svg/Facebook.svg" alt="Facebook"></a>
+                    </li>
+                    <li>
+                        <a class="social-item ig" href="#"><span class="visually-hidden">Instagramm</span><img src="svg/Instagram.svg" alt="Instagramm"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-copyright">
+                <span>Разработано:</span>
+                <a class="button" href="htmlacademy.ru">HTML Academy</a>
+            </div>
     </footer>
-    <section class="modal modal-login">
+
+    <section class="modal modal-login visually-hidden">
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль</p>
             <form class="login-form" action="login-form.html" method="post">
@@ -172,7 +187,7 @@
             </form>
         <span class="modal-close">Закрыть</span>
     </section>
-    <section class="modal-map">
+    <section class="modal modal-map visually-hidden">
         <h2 class="visually-hidden">Как добраться о нас</h2>
         <span class="modal-close">Закрыть</span>
     </section>
