--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <span>Давай дружить!</span>
                 <ul class="social-list">
                     <li>
-                        <a class="social-item" href="#"><span class="visually-hidden">Vkontakte</span><img src="svg/vk.svg" alt="Vkontakte"></a>
+                        <a class="social-item vk" href="#"><span class="visually-hidden">Vkontakte</span><img src="svg/vk.svg" alt="Vkontakte"></a>
                     </li>
                     <li>
                         <a class="social-item fb" href="#"><span class="visually-hidden">Facebook</span><img src="svg/Facebook.svg" alt="Facebook"></a>
